// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`syntax highlighting > given JavaScript code > when rendering JS with different file extension > then applies JavaScript highlighting 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.js[0m                                                                                                     [39m[38;2;250;208;0m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   1 [39mvar x = function() { return true; };                                                                           [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`syntax highlighting > given TypeScript code > when rendering code with comments > then applies syntax highlighting to comments 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.ts[0m                                                                                                     [39m[38;2;250;208;0m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   1 [39m// this is a comment                                                                                           [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   2 [39mconst x = 1;                                                                                                   [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`syntax highlighting > given TypeScript code > when rendering code with keywords > then applies syntax highlighting to keywords 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.ts[0m                                                                                                     [39m[38;2;250;208;0m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   1 [39mconst x = 42;                                                                                                  [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   2 [39mfunction foo() { return x; }                                                                                   [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`syntax highlighting > given TypeScript code > when rendering code with numbers > then applies syntax highlighting to numeric literals 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.ts[0m                                                                                                     [39m[38;2;250;208;0m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   1 [39mconst pi = 3.14;                                                                                               [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   2 [39mconst count = 100;                                                                                             [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`syntax highlighting > given TypeScript code > when rendering code with strings > then applies syntax highlighting to string literals 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.ts[0m                                                                                                     [39m[38;2;250;208;0m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   1 [39mconst msg = "hello world";                                                                                     [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`syntax highlighting > given highlight cache > when content changes > then recomputes highlighting 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.ts[0m                                                                                                     [39m[38;2;250;208;0m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   1 [39m2const x = 1;                                                                                                  [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`syntax highlighting > given plain text file > when rendering non-code file > then does not apply syntax highlighting 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: readme.txt[0m                                                                                                  [39m[38;2;250;208;0m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   1 [39mThis is plain text.                                                                                            [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m   2 [39mNo special tokens.                                                                                             [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;
